[metadata]
name = pytorchipfs
version = 1.0.1
author = Ken Thorn
author_email = kenthorn95@protonmail.com
description = IPFS support for PyTorch
keywords =
    torch,
    pytorch,
    ipfs
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kenthorn95/PyTorchIPFS
project_urls =
    Bug Tracker = https://github.com/kenthorn95/PyTorchIPFS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src